# docketanalyzer

./: .gitignore  404.html  AGENTS.md  CNAME  DEVELOPMENT.md  MANIFEST.in  README.ipynb  README.md  example.py  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup copy.py  setup.py  sitemap.xml  temp.py  train.csv
.github/workflows/: build-docs.yml  code-format.yml  code-quality.yml  deploy-docs.yml  run-code-format.yml  run-tests.yml  tests.yml
data/: docket_text.csv  dockets.csv  tagged_dockets.csv
docketanalyzer/: __init__.py  chat.py  config.py  env.py  lazy.py  ocr.py  pacer.py  utils.py
docketanalyzer/agents/: __init__.py  agent.py  chat.py  tool.py  working_memory_mixin.py
docketanalyzer/app/data/: apps.py
docketanalyzer/app/project/: settings.py
docketanalyzer/chat/: __init__.py
docketanalyzer/choices/: __init__.py  choice.py  court.py  docket.py  idb.py  judge.py  labels.py  nature_suit.py  party.py
docketanalyzer/cli/: __init__.py  build.py  check_docket_dirs.py  check_dockets.py  check_idb.py  configure.py  format.py  hello.py  open.py  prepare_idb_dataset.py  sync.py  tasks.py  test.py
docketanalyzer/cli/dev/: __init__.py  build.py  build_extension.py  format.py  install_extension.py
docketanalyzer/config/: __init__.py  config.py  env_config.py  package_config.py
docketanalyzer/core/: __init__.py  chat.py  colab.py  core_dataset.py  database.py  docket_index.py  docket_manager.py  elastic.py  embeddings.py  flp.py  juri.py  object.py  ocr.py  psql.py  registry.py  s3.py  sali.py  task.py  websearch.py
docketanalyzer/data/: docket_batch.py  docket_index.py  docket_manager.py  idb.py
docketanalyzer/data/choices/: choice.py  court.py  docket.py  idb.py  labels.py  nature_suit.py  party.py
docketanalyzer/docket/: __init__.py  docket_batch.py  docket_index.py  docket_manager.py  idb.py  pacer.py
docketanalyzer/docket/choices/: __init__.py  court.py  idb.py  judge.py  labels.py  nature_suit.py  party.py
docketanalyzer/labels/: __init__.py  entry_type_labels.py  label.py  motion_type_labels.py
docketanalyzer/ml/: .gitignore  __init__.py
docketanalyzer/ml/pipelines/: __init__.py  classification_pipeline.py  classification_pipelines.py  embedding_pipelines.py  multi_label_classification_pipeline.py  multi_task_pipeline.py  multilabel_classification_pipeline.py  multilabel_classification_pipelines.py  multilabel_pipelines.py  multitask_pipelines.py  ner_pipelines.py  pipeline.py  remote_pipeline.py  token_classification_pipeline.py
docketanalyzer/ml/routines/: __init__.py  classification_routine.py  multi_label_classification_routine.py  multi_task_routine.py  multilabel_classification_routine.py  multitask_routine.py  routine.py  token_classification_routine.py
docketanalyzer/ocr/: __init__.py  document.py  layout.py  ocr.py  remote.py  utils.py
docketanalyzer/pacer/: __init__.py  pacer.py  recap.py
docketanalyzer/package_data/: extensions.txt
docketanalyzer/pipelines/: __init__.py  label_pipeline.py  multilabel_pipelines.py  multitask_pipelines.py  ner_pipelines.py  parallel_inference.py  pipeline.py  remote_pipeline.py
docketanalyzer/routines/: __init__.py  classification_routine.py  multilabel_classification_routine.py  multitask_routine.py  routine.py
docketanalyzer/services/: __init__.py  elastic.py  psql.py  redis.py  s3.py  service.py
docketanalyzer/tasks/: __init__.py  consolidation_tasks.py  data_tasks.py  label_prediction_tasks.py  task.py
docketanalyzer/utils/: __init__.py  config.py  lazy.py  misc_utils.py  package_data.py  registry.py  text_utils.py  type_utils.py  utils.py
docs/: config.md  index.md  mkdocs.yml
docs/api/: chat.md  main.md
docs/docs/: index.md
docs/examples/: pacer.md
docs/quickstart/: agents.md  dockets.md  pacer.md  services.md
docs/static/css/: custom.css
docs/toolkit/: .gitignore
docs/utils/: pacer.md  services.md
extensions/docketanalyzer_chat/: __init__.py  build_config.json
extensions/docketanalyzer_core/: __init__.py  build_config.json
extensions/docketanalyzer_core/app/data/: apps.py
extensions/docketanalyzer_core/commands/: check_dockets.py  check_idb.py  open.py  sync.py  tasks.py
extensions/docketanalyzer_core/core/: core_dataset.py  docket_manager.py  s3.py  task.py  websearch.py
extensions/docketanalyzer_ocr/: __init__.py  build_config.json
extensions/docketanalyzer_pipelines/: __init__.py  build_config.json  parallel_inference.py  remote_pipeline.py
extensions/docketanalyzer_pipelines/pipelines/: multilabel_pipelines.py  ner_pipelines.py
extensions/docketanalyzer_pipelines/routines/: routine.py  token_classification_routine.py
outputs/count-extract/model/: run_config.json
outputs/logs/: events.out.tfevents.1738042934.cpu.local.43205.0  events.out.tfevents.1738043059.cpu.local.43427.0  events.out.tfevents.1738043097.cpu.local.43531.0  events.out.tfevents.1738043349.cpu.local.43999.0  events.out.tfevents.1738043457.cpu.local.44253.0  events.out.tfevents.1738043629.cpu.local.44696.0  events.out.tfevents.1738043682.cpu.local.44861.0
pipelines/: DocketClassificationPipeline.py  __init__.py
search/: search_index.json
tests/: conftest.py  setup_fixtures.py  test_agent.py  test_chat.py  test_docket_manager.py  test_ml.py  test_ocr.py  test_pacer.py  test_package.py  test_recap.py  test_services.py
tests/agents/: test_agent.py  test_chat.py
tests/docket/: conftest.py  test_pacer.py
tests/fixtures/: __init__.py  docket.html  docket.json  insd__1_24-cv-00524.doc.1.0.json  insd__1_24-cv-00524.docket.html  insd__1_24-cv-00524.docket.json  insd__1_24-cv-00524.recap.attorneys.json  insd__1_24-cv-00524.recap.consolidated.json  insd__1_24-cv-00524.recap.docket.json  insd__1_24-cv-00524.recap.entries.json  insd__1_24-cv-00524.recap.parties.json  nynd__8_20-mj-00487.docket.html  nynd__8_20-mj-00487.recap.attorneys.json  nynd__8_20-mj-00487.recap.entries.json  nynd__8_20-mj-00487.recap.parties.json  recap.consolidated.json  recap.docket.json
tests/fixtures/docket/: docket.html  docket.json
tests/pacer/: test_pacer.py  test_recap.py
(+9 files in other folders)
