[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "docketanalyzer"
version = "0.4.9"
authors = [
    { name = "Nathan Dahlberg" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
     "docketanalyzer-core>=0.1.11",    
    "nates>=0.1.2",
]

[project.optional-dependencies]
dev = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-pygments>=0.0.2",
]
all = [
    "docketanalyzer-chat>=0.1.1",
    "docketanalyzer-pacer>=0.1.1",
    "docketanalyzer-ocr>=0.1.9",
]
chat = [
    "docketanalyzer-chat>=0.1.1",
]
pacer = [
    "docketanalyzer-pacer>=0.1.1",
]
ocr = [
    "docketanalyzer-ocr>=0.1.9",
]

[project.scripts]
da = "docketanalyzer:cli.cli"

[tool.hatch.build.targets.wheel]
packages = [
    "docketanalyzer",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "*",
    "!docketanalyzer/**",
    "!pyproject.toml",
    "!README.md",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "N",
    "SIM",
    "PD",
    "NPY",
    "PTH",
    "RUF",
    "D",
]
ignore = [
    "B008",
    "D100",
    "D104",
    "N801",
    "N806",
]

[tool.ruff.lint.isort]
known-first-party = [
    "docketanalyzer",
]

section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "I001",
    "I002",
    "F403",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
addopts = "-ra -q --cov=docketanalyzer -m 'not cost'"
testpaths = [
    "tests",
]
pythonpath = "."
norecursedirs = "projects"
markers = [
    "cost: tests that incur real costs when run",
    "local: requires credentials only available locally",
]
